--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Street Food</string>
+    <string name="splash_screen_text">Enjoy Street Food at Your Home</string>
+    <string name="signature_text">Designed By Aman</string>
+    <string name="next">Next</string>
 </resources>
